--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.4.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.7.2",
     "twilio": "^4.19.0"
   },
   "devDependencies": {
